--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,10 @@
   max-width: 600px;
 }
 
+.buttonDiv {
+  margin: 15px auto 5px auto;
+}
+
 .header {
   text-align: center;
   font-size: 32px;
@@ -23,14 +27,6 @@
   text-align: center;
   color: gray;
   margin-top: 16px;
-}
-
-.waveButton {
-  cursor: pointer;
-  margin-top: 16px;
-  padding: 8px;
-  border: 0;
-  border-radius: 5px;
 }
 
 .wave-board {
