--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@
   box-sizing: border-box;
   box-shadow: 0px 1px 12px white;
   border-radius: 18px;
-  background-color: #1C2333;
+  background-color: black;
   margin: 5px;
   margin-top: 15px;
   padding: 10px;
