--- a/src/App.css
+++ b/src/App.css
@@ -29,9 +29,31 @@
   margin-top: 16px;
 }
 
+.wave-title {
+  position: absolute;
+  top: 35%;
+  left: 25%;
+  color: white;
+  text-align: center;
+  margin: 10px;
+}
+
+.wave-board-list {
+  position: absolute;
+  top: 40%;
+  left: 12%;
+  right: 0;
+  bottom: 0;
+  width: fit-content;
+  display: grid;
+  grid-template-columns: repeat(2, 3fr);
+  grid-auto-rows: 200px;
+  grid-gap: 5px;
+}
+
 .wave-board {
   box-sizing: border-box;
-  box-shadow: 0px 1px 12px white;
+  box-shadow: 0 2px 10px #26bf47;
   border-radius: 18px;
   background-color: black;
   margin: 5px;
@@ -59,4 +81,28 @@
 .wave-board > h3 {
   color: green;
   font-size: 12px;
+}
+
+@media (max-width: 650px) {
+  .wave-title {
+    position: absolute;
+    top: 35%;
+    left: 25%;
+    color: white;
+    text-align: center;
+    margin: 10px;
+  }
+
+  .wave-board-list {
+    position: absolute;
+    top: 40%;
+    left: 12%;
+    right: 0;
+    bottom: 0;
+    width: fit-content;
+    display: grid;
+    grid-template-columns: repeat(1, 3fr);
+    grid-auto-rows: 200px;
+    grid-gap: 5px;
+  }
 }
