--- a/src/App.css
+++ b/src/App.css
@@ -12,8 +12,15 @@
   max-width: 600px;
 }
 
-.buttonDiv {
-  margin: 15px auto 5px auto;
+.wave-buttonDiv {
+  width: 50%;
+  margin-left: 250px;
+}
+
+.highfive-buttonDiv {
+  width: 50%;
+  margin-right: 250px;
+  margin-top: -112px;
 }
 
 .header {
@@ -32,6 +39,15 @@
 .wave-title {
   position: absolute;
   top: 35%;
+  right: 25%;
+  color: white;
+  text-align: center;
+  margin: 10px;
+}
+
+.highfive-title {
+  position: absolute;
+  top: 35%;
   left: 25%;
   color: white;
   text-align: center;
@@ -41,12 +57,25 @@
 .wave-board-list {
   position: absolute;
   top: 40%;
+  right: 20%;
+  right: 0;
+  bottom: 0;
+  width: fit-content;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-auto-rows: 200px;
+  grid-gap: 5px;
+}
+
+.highfive-board-list {
+  position: absolute;
+  top: 40%;
   left: 12%;
   right: 0;
   bottom: 0;
   width: fit-content;
   display: grid;
-  grid-template-columns: repeat(2, 3fr);
+  grid-template-columns: repeat(1, 3fr);
   grid-auto-rows: 200px;
   grid-gap: 5px;
 }
