--- a/src/App.css
+++ b/src/App.css
@@ -13,14 +13,17 @@
 }
 
 .wave-buttonDiv {
-  width: 50%;
-  margin-left: 250px;
+  position: absolute;
+  right: 13%;
+  top: 22%;
+  width: 15%;
 }
 
 .highfive-buttonDiv {
-  width: 50%;
-  margin-right: 250px;
-  margin-top: -112px;
+  position: absolute;
+  left: 17%;
+  top: 17%;
+  width: 15%;
 }
 
 .header {
@@ -39,7 +42,7 @@
 .wave-title {
   position: absolute;
   top: 35%;
-  right: 25%;
+  right: 15%;
   color: white;
   text-align: center;
   margin: 10px;
@@ -48,7 +51,7 @@
 .highfive-title {
   position: absolute;
   top: 35%;
-  left: 25%;
+  left: 15%;
   color: white;
   text-align: center;
   margin: 10px;
@@ -57,12 +60,11 @@
 .wave-board-list {
   position: absolute;
   top: 40%;
-  right: 20%;
-  right: 0;
+  right: 2%;
   bottom: 0;
   width: fit-content;
   display: grid;
-  grid-template-columns: repeat(1, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-auto-rows: 200px;
   grid-gap: 5px;
 }
@@ -70,13 +72,13 @@
 .highfive-board-list {
   position: absolute;
   top: 40%;
-  left: 12%;
+  left: 2%;
   right: 0;
   bottom: 0;
   width: fit-content;
   display: grid;
-  grid-template-columns: repeat(1, 3fr);
-  grid-auto-rows: 200px;
+  grid-template-columns: repeat(2, 3fr);
+  grid-auto-rows: 250px;
   grid-gap: 5px;
 }
 
@@ -112,26 +114,123 @@
   font-size: 12px;
 }
 
+.highfive-board {
+  box-sizing: border-box;
+  box-shadow: 0 2px 10px #F4C73D;
+  border-radius: 18px;
+  background-color: black;
+  margin: 5px;
+  margin-top: 15px;
+  padding: 10px;
+  text-align: center;
+}
+
+.highfive-board > p {
+  font-size: 14px;
+  text-decoration: underline;
+  color: blanchedalmond;
+}
+
+.highfive-board > h2 {
+  font-size: 16px;
+  color: white;
+}
+
+.highfive-board > h1 {
+  font-size: 20px;
+  color: darkgray;
+}
+
+.highfive-board > h3 {
+  color: #F4C73D;
+  font-size: 12px;
+}
+
+
+
 @media (max-width: 650px) {
+
+  .wave-buttonDiv {
+    position: absolute;
+    right: 17%;
+    top: 17.5%;
+    width: 15%;
+  }
+
   .wave-title {
     position: absolute;
+    font-size: 1.5rem;
     top: 35%;
-    left: 25%;
+    right: -23%;
     color: white;
     text-align: center;
     margin: 10px;
   }
 
+  .wave-board {
+    box-sizing: border-box;
+    box-shadow: 0 2px 10px #26bf47;
+    border-radius: 18px;
+    background-color: black;
+    margin: 5px;
+    margin-top: 15px;
+    padding: 10px;
+    text-align: center;
+    width: 70%;
+    overflow: hidden;
+    word-wrap: break-word;
+  }
+
   .wave-board-list {
     position: absolute;
     top: 40%;
-    left: 12%;
-    right: 0;
+    right: -49%;
     bottom: 0;
-    width: fit-content;
     display: grid;
     grid-template-columns: repeat(1, 3fr);
     grid-auto-rows: 200px;
+    grid-gap: 5px;
+  }
+
+  .highfive-buttonDiv {
+    position: absolute;
+    left: 5%;
+    top: 10%;
+    width: 15%;
+  }
+
+  .highfive-title {
+    position: absolute;
+    top: 35%;
+    left: 3%;
+    font-size: 1.5rem;
+    color: white;
+    text-align: center;
+    margin: 10px;
+  }
+
+  .highfive-board {
+    box-sizing: border-box;
+    box-shadow: 0 2px 10px #F4C73D;
+    border-radius: 18px;
+    background-color: black;
+    margin: 5px;
+    margin-top: 15px;
+    padding: 10px;
+    text-align: center;
+    width: 70%;
+    overflow: hidden;
+    word-wrap: break-word;
+  }
+
+  .highfive-board-list {
+    position: absolute;
+    top: 40%;
+    left: 1%;
+    bottom: 0;
+    display: grid;
+    grid-template-columns: repeat(1, 3fr);
+    grid-auto-rows: 280px;
     grid-gap: 5px;
   }
 }
