--- a/src/App.css
+++ b/src/App.css
@@ -60,11 +60,11 @@
 .wave-board-list {
   position: absolute;
   top: 40%;
-  right: 2%;
+  right: 10%;
   bottom: 0;
   width: fit-content;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(1, 1fr);
   grid-auto-rows: 200px;
   grid-gap: 5px;
 }
@@ -72,12 +72,12 @@
 .highfive-board-list {
   position: absolute;
   top: 40%;
-  left: 2%;
+  left: 10%;
   right: 0;
   bottom: 0;
   width: fit-content;
   display: grid;
-  grid-template-columns: repeat(2, 3fr);
+  grid-template-columns: repeat(1, 3fr);
   grid-auto-rows: 250px;
   grid-gap: 5px;
 }
@@ -146,21 +146,22 @@
   font-size: 12px;
 }
 
-
-
 @media (max-width: 650px) {
+  .mainContainer {
+    margin-top: 15px;
+  }
 
   .wave-buttonDiv {
     position: absolute;
     right: 17%;
-    top: 17.5%;
+    top: 27.5%;
     width: 15%;
   }
 
   .wave-title {
     position: absolute;
     font-size: 1.5rem;
-    top: 35%;
+    top: 45%;
     right: -23%;
     color: white;
     text-align: center;
@@ -183,7 +184,7 @@
 
   .wave-board-list {
     position: absolute;
-    top: 40%;
+    top: 50%;
     right: -49%;
     bottom: 0;
     display: grid;
@@ -195,13 +196,13 @@
   .highfive-buttonDiv {
     position: absolute;
     left: 5%;
-    top: 10%;
+    top: 20%;
     width: 15%;
   }
 
   .highfive-title {
     position: absolute;
-    top: 35%;
+    top: 45%;
     left: 3%;
     font-size: 1.5rem;
     color: white;
@@ -225,12 +226,111 @@
 
   .highfive-board-list {
     position: absolute;
-    top: 40%;
+    top: 50%;
     left: 1%;
     bottom: 0;
     display: grid;
     grid-template-columns: repeat(1, 3fr);
     grid-auto-rows: 280px;
+    grid-gap: 5px;
+  }
+}
+
+@media (max-width: 480px) {
+  .mainContainer {
+    margin-top: 15px;
+  }
+
+  input {
+    width: 50% !important;
+    font-size: 0.7rem;
+  }
+
+  button {
+    width: 55% !important;
+  }
+
+  .wave-buttonDiv {
+    position: absolute;
+    right: -15%;
+    top: 27.5%;
+    width: 50%;
+  }
+
+  .wave-title {
+    position: absolute;
+    font-size: 1rem;
+    top: 45%;
+    right: 3%;
+    color: white;
+    text-align: center;
+    margin: 10px;
+  }
+
+  .wave-board {
+    box-sizing: border-box;
+    box-shadow: 0 2px 10px #26bf47;
+    border-radius: 18px;
+    background-color: black;
+    margin: 5px;
+    margin-top: 15px;
+    padding: 10px;
+    text-align: center;
+    width: 48%;
+    overflow: hidden;
+    word-wrap: break-word;
+  }
+
+  .wave-board-list {
+    position: absolute;
+    top: 50%;
+    right: -48%;
+    bottom: 0;
+    display: grid;
+    grid-template-columns: repeat(1, 3fr);
+    grid-auto-rows: 220px;
+    grid-gap: 5px;
+  }
+
+  .highfive-buttonDiv {
+    position: absolute;
+    left: 12%;
+    top: 17%;
+    width: 50%;
+  }
+
+  .highfive-title {
+    position: absolute;
+    top: 45%;
+    left: 3%;
+    font-size: 1rem;
+    color: white;
+    text-align: center;
+    margin: 10px;
+  }
+
+  .highfive-board {
+    box-sizing: border-box;
+    box-shadow: 0 2px 10px #F4C73D;
+    border-radius: 18px;
+    background-color: black;
+    margin: 5px;
+    margin-top: 15px;
+    padding: 10px;
+    text-align: center;
+    width: 48%;
+    overflow: hidden;
+    word-wrap: break-word;
+  }
+
+  .highfive-board-list {
+    position: absolute;
+    top: 50%;
+    left: 1%;
+    bottom: 0;
+    display: grid;
+    grid-template-columns: repeat(1, 3fr);
+    grid-auto-rows: 300px;
     grid-gap: 5px;
   }
 }
