--- a/src/UI/Input.css
+++ b/src/UI/Input.css
@@ -19,3 +19,11 @@ input {
   border-color: #F4C73D;
   box-shadow: 0 2px 10px #F4C73D;
 }
+
+
+@media (max-width: 480px) {
+  input {
+    width: 220px;
+    height: 30px;
+  }
+}
