--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 
 .wave-buttonDiv {
   position: absolute;
-  right: 15%;
+  left: 60%;
   top: 22%;
   width: 15%;
 }
@@ -35,15 +35,17 @@
 
 .bio {
   text-align: center;
-  color: gray;
+  color: #ACE7FF;
   margin-top: 16px;
+  margin-left: auto;
+  margin-right: auto;
   width: 90%;
 }
 
 .wave-title {
   position: absolute;
   top: 35%;
-  right: 15%;
+  left: 60%;
   color: white;
   text-align: center;
   margin: 10px;
@@ -61,7 +63,7 @@
 .wave-board-list {
   position: absolute;
   top: 40%;
-  right: 12%;
+  left: 58%;
   bottom: 0;
   width: fit-content;
   display: grid;
@@ -73,7 +75,7 @@
 .highfive-board-list {
   position: absolute;
   top: 40%;
-  left: 12%;
+  left: 14%;
   right: 0;
   bottom: 0;
   width: fit-content;
@@ -95,24 +97,24 @@
 }
 
 .wave-board > p {
-  font-size: 14px;
+  font-size: 0.8rem;
   text-decoration: underline;
   color: blanchedalmond;
 }
 
 .wave-board > h2 {
-  font-size: 16px;
+  font-size: 1rem;
   color: white;
 }
 
 .wave-board > h1 {
-  font-size: 20px;
+  font-size: 1.2rem;
   color: darkgray;
 }
 
 .wave-board > h3 {
   color: green;
-  font-size: 12px;
+  font-size: 0.8rem;
 }
 
 .highfive-board {
@@ -127,31 +129,31 @@
 }
 
 .highfive-board > p {
-  font-size: 14px;
+  font-size: 0.8rem;
   text-decoration: underline;
   color: blanchedalmond;
 }
 
 .highfive-board > h2 {
-  font-size: 16px;
+  font-size: 1rem;
   color: white;
 }
 
 .highfive-board > h1 {
-  font-size: 20px;
+  font-size: 1.2rem;
   color: darkgray;
 }
 
 .highfive-board > h3 {
   color: #F4C73D;
-  font-size: 12px;
+  font-size: 0.8rem;
 }
 
 @media (max-width: 900px) {
 
   .wave-buttonDiv {
     position: absolute;
-    right: 25%;
+    left: 65%;
     top: 22%;
     width: 15%;
   }
@@ -159,21 +161,29 @@
   .wave-title {
     position: absolute;
     top: 35%;
-    right: 5%;
+    left: 53%;
     color: white;
     text-align: center;
     margin: 10px;
+    width: 50%;
   }
 
   .wave-board-list {
     position: absolute;
     top: 40%;
-    right: 1%;
+    left: 58%;
     bottom: 0;
     display: grid;
     grid-template-columns: repeat(1, 3fr);
     grid-auto-rows: 190px;
     grid-gap: 5px;
+  }
+
+  .highfive-buttonDiv {
+    position: absolute;
+    left: 5%;
+    top: 17%;
+    width: 15%;
   }
 
   .highfive-title {
@@ -204,7 +214,7 @@
 
   .wave-buttonDiv {
     position: absolute;
-    right: 25%;
+    left: 56%;
     top: 27.5%;
     width: 15%;
   }
@@ -213,7 +223,7 @@
     position: absolute;
     font-size: 1.5rem;
     top: 45%;
-    right: 5%;
+    left: 50%;
     color: white;
     text-align: center;
     margin: 10px;
@@ -236,7 +246,7 @@
   .wave-board-list {
     position: absolute;
     top: 50%;
-    right: -15%;
+    left: 50%;
     bottom: 0;
     display: grid;
     grid-template-columns: repeat(1, 3fr);
@@ -303,7 +313,7 @@
 
   .wave-buttonDiv {
     position: absolute;
-    right: -15%;
+    left: 65%;
     top: 27.5%;
     width: 50%;
   }
@@ -312,7 +322,7 @@
     position: absolute;
     font-size: 1rem;
     top: 45%;
-    right: 3%;
+    left: 50%;
     color: white;
     text-align: center;
     margin: 10px;
@@ -327,7 +337,7 @@
     margin-top: 15px;
     padding: 10px;
     text-align: center;
-    width: 48%;
+    width: 45%;
     overflow: hidden;
     word-wrap: break-word;
   }
@@ -335,7 +345,7 @@
   .wave-board-list {
     position: absolute;
     top: 50%;
-    right: -48%;
+    left: 55%;
     bottom: 0;
     display: grid;
     grid-template-columns: repeat(1, 3fr);
@@ -345,7 +355,7 @@
 
   .highfive-buttonDiv {
     position: absolute;
-    left: 12%;
+    left: 10%;
     top: 20%;
     width: 50%;
   }
@@ -353,7 +363,7 @@
   .highfive-title {
     position: absolute;
     top: 45%;
-    left: 3%;
+    left: 5%;
     font-size: 1rem;
     color: white;
     text-align: center;
@@ -369,7 +379,7 @@
     margin-top: 15px;
     padding: 10px;
     text-align: center;
-    width: 48%;
+    width: 55%;
     overflow: hidden;
     word-wrap: break-word;
   }
