--- a/src/App.css
+++ b/src/App.css
@@ -35,11 +35,16 @@
 
 .bio {
   text-align: center;
-  color: #ACE7FF;
+  color: #E4C73D;
   margin-top: 16px;
   margin-left: auto;
   margin-right: auto;
   width: 90%;
+}
+
+.bio > em {
+  color: green;
+  font-weight: bolder;
 }
 
 .wave-title {
